# AniVault

./: .coveragerc  .env.example  .gitignore  .pre-commit-config-minimal.yaml  .pre-commit-config.yaml  .secrets.baseline  .venv-auto-activate.ps1  AGENTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  DICT_TO_DATACLASS_COMPLETE.md  EXECUTABLE_README.md  FINAL_SPRINT_SUMMARY.md  LICENSE  LICENSE-THIRD-PARTY.txt  NEXT_ACTIONS.md  PHASE3_COMPLETE.md  PHASE3_FINAL_COMPLETE.md  PHASE3_QUICK_WINS_PR.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETE.md  PR_DICT_TO_DATACLASS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PROGRESS.md  REFACTORING_PROGRESS_LOG.md  REFACTORING_REPORT.md  RISK_VALIDATION_REPORT.md  STAGE1_FINAL_REPORT.md  STAGE2_COMPLETE_REPORT.md  STAGE2_FINAL_REPORT.md  STAGE2_PROGRESS.md  STAGE2_ROLLBACK_REPORT.md  STAGE3_FINAL_REPORT.md  STAGE3_REPORT.md  STAGE5_SUMMARY.md  STAGE6_SUMMARY.md  (+77 more)
.cursor/: mcp.json  settings.json
.cursor/rules/: 00_ai_security_priority.mdc  README.md  agents.mdc  ai_security.mdc  async_patterns.mdc  database_patterns.mdc  error_handling.mdc  file_processing.mdc  gui_patterns.mdc  logging.mdc  mcp_server_utilization.mdc  naming_conventions.mdc  packaging.mdc  performance.mdc  project_management.mdc  python_development.mdc  python_tooling.mdc  quality_assurance.mdc  self_improve.mdc  system_standards.mdc  testing.mdc  tmdb_api.mdc  utf8_encoding.mdc
.github/: pull_request_template.md
.github/instructions/: dev_workflow.instructions.md  self_improve.instructions.md  taskmaster.instructions.md  vscode_rules.instructions.md
.github/workflows/: benchmark.yml  ci.yml  code-quality.yml  quality-gate.yml  release.yml  security-ci.yml
.serena/: project.yml
.serena/memories/: additional-duplicate-error-patterns.md  anivault-project-overview.md  cli-implementation-complete.md  code_style_conventions.md  coding_standards.md  database-indexing-analysis.md  database-indexing-completion-results.md  detailed_architecture_analysis.md  development_commands.md  (+24 more)
.taskmaster/: config.json  state.json
alembic/: env.py
anivault_gui/: .gitignore  __init__.py  main.py
benchmarks/: .gitignore  __init__.py  benchmark_cache.py  benchmark_matching.py  benchmark_scenarios.py  generate_comparison_report.py  performance_report.py  subtitle_scenarios.py  test_data.py
config/: config.toml  config.toml.template  settings.yaml
docs/: AI_SECURITY_SUMMARY.md  DoD.md  MAGIC_VALUES_REFACTORING_FINAL.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROJECT_ANALYSIS_2025-10-13.md  PROJECT_REVIEW_SUMMARY_20251008.md  README.md  TROUBLESHOOTING_GUIDE.md  _proof_driven_dev_mode.md  ai-code-generation-guidelines.md  ai-security-training.md  architecture.md  code-quality-guide.md  code_quality_baseline_report.md  develop_plan.md  development-plan.md  development-tag-order.md  gui-development.md  magic_values_exclusion_summary.md  monitoring_system_documentation.md  proof_driven_dev_mode.md  refactoring-briefing.md  refactoring-examples.md  resilience_system_usage.md  task4_test_summary.md  tmdb-api-key-guide.md  tmdb-api-validation-results.md  tmdb-setup.md  tmdb_cache_db.md  tmdb_cache_db_schema.md  tmdb_cache_db_schema_validation.md  tmdb_comprehensive_search_flow.md
examples/: bounded_queue_demo.py  compression_example.py  group_name_update_example.py  performance_profiling_example.py  sync_scheduler_example.py  tmdb_comprehensive_search_example.py
monitoring/: README.md  anivault_rules.yml  prometheus.yml
refactoring/: ARCHITECTURE_CHANGES.md  GOD_MODULE_ANALYSIS.md  README.md  plan.md  진행상황.md
reports/: theme-color-consistency-analysis.md  theme-color-consistency-implementation-report.md
schemas/: cache_object.schema.json  cli_event.schema.json  plan.schema.json
scripts/: analyze_high_severity.py  analyze_magic_phase2.py  analyze_magic_top_files.py  analyze_query_performance.py  analyze_violations.py  apply_performance_indexes.py  benchmark.py  benchmark_enricher_performance.py  benchmark_parser.py  build_exe.bat  check_duplicates.py  check_secrets.py  check_stage1.py  collect_scoring_baseline.py  compare_magic_results.py  compare_magic_violations.py  compare_performance.py  create_performance_indexes.sql  create_test_data.py  create_test_dataset.py  detect_magic_values.py  dev.py  explore_tmdb_api.py  explore_tmdb_api_additional.py  fetch_all_tmdb_endpoints.py  final_verification.py  generate_large_test_directory.py  generate_test_data.py  generate_test_files.py  memory_profile.py  memory_profiling_test.py  migrate_config.py  profile_memory.py  profile_scanner.py  run_memory_profile.py  run_tests.py  security_check.py  setup-pre-commit.bat  setup-pre-commit.sh  setup.py  (+10 more)
src/: __init__.py  app.py  main.py
test_anime_files/: Attack on Titan S01E01.mkv.json  MyAnime_01_1080p.mkv  MyAnime_02_1080p.mkv  Naruto Shippuden 001.avi.json  One Piece Episode 1000.mp4.json
test_files/: One_Piece_S01E01_720p.mkv
tests/: __init__.py  conftest.py  test_anime_parser.py  test_api_integration.py  test_app.py  test_async_session_manager.py  test_async_tmdb_client.py  test_batch_db_operations.py  test_batch_update_operations.py  test_bounded_queue.py  test_cache_key_generator.py  test_circuit_breaker.py  test_circuit_breaker_database_integration.py  test_cli_entry_point.py  test_cli_error_handler.py  test_cli_error_handling_integration.py  test_compression.py  test_compression_serialization.py  test_config.py  test_config_integration.py  test_config_schema.py  test_consistency_reporter.py  test_consistency_scheduler.py  test_consistency_validator.py  test_database_health.py  test_database_integration.py  test_database_integration_simple.py  test_database_versioning.py  test_directory_cache_linkedhashtable.py  test_e2e_workflow.py  test_e2e_workflow_simple.py  test_encoding_and_logging.py  test_engine_constants.py  test_enhanced_early_exit.py  test_error_handling_robustness.py  test_fallback_strategy_analysis.py  test_fallback_strategy_limitation.py  test_file_grouper.py  test_file_mover.py  test_file_pipeline_worker.py  (+62 more)
(+1050 files in other folders)
